[gd_scene load_steps=15 format=3 uid="uid://cm7m48govklbf"]

[ext_resource type="Script" uid="uid://bf0seyme28at1" path="res://scenes/characters/player/player.gd" id="1_6avc5"]
[ext_resource type="SpriteFrames" uid="uid://jbtbnjbmuoe6" path="res://resources/sprite_frames/beastmaster.tres" id="2_686vu"]
[ext_resource type="PackedScene" uid="uid://ctidfyt6dvoha" path="res://scenes/components/health_component.tscn" id="4_hss88"]
[ext_resource type="PackedScene" uid="uid://b0m7tie43m2sb" path="res://scenes/components/magnet_component.tscn" id="5_mk55u"]
[ext_resource type="Theme" uid="uid://cf1bkdhjqfema" path="res://resources/themes/default.tres" id="5_qd3e3"]
[ext_resource type="PackedScene" uid="uid://bqodew11eqfes" path="res://scenes/components/velocity_component.tscn" id="6_mk55u"]
[ext_resource type="Script" uid="uid://p8ii46y80jqx" path="res://scripts/utils/state_machine/state_machine.gd" id="7_xuses"]
[ext_resource type="Script" uid="uid://b2v5elk6lcle3" path="res://scenes/characters/player/states/idle_state.gd" id="8_42irl"]
[ext_resource type="Script" uid="uid://cj01h5gktgt1u" path="res://scenes/characters/player/states/walk_state.gd" id="9_42irl"]
[ext_resource type="Script" uid="uid://jvubv4rpegit" path="res://scenes/characters/player/states/die_state.gd" id="10_3xnwo"]
[ext_resource type="Script" uid="uid://bu2ncyxorrpf0" path="res://scenes/characters/player/states/hit_state.gd" id="10_djydg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hss88"]
radius = 4.0
height = 10.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xuses"]
radius = 21.0238

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_686vu"]
radius = 7.0
height = 16.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_6avc5")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_686vu")
animation = &"hit_left"
autoplay = "idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_hss88")

[node name="VelocityComponent" parent="." instance=ExtResource("6_mk55u")]
max_speed = 55
acceleration = 15.0

[node name="HealthComponent" parent="." instance=ExtResource("4_hss88")]

[node name="MagnetComponent" parent="." instance=ExtResource("5_mk55u")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MagnetComponent"]
shape = SubResource("CircleShape2D_xuses")
debug_color = Color(0.244992, 0.564413, 0.791619, 0.42)

[node name="CollisionArea2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 96

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
shape = SubResource("CapsuleShape2D_686vu")
debug_color = Color(0.994505, 0, 0.220991, 0.42)

[node name="Abilities" type="Node2D" parent="."]

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="HealIntervalTimer" type="Timer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(24, 6)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -12.0
offset_top = -24.0
offset_right = 12.0
offset_bottom = -18.0
grow_horizontal = 2
size_flags_horizontal = 4
theme = ExtResource("5_qd3e3")
theme_type_variation = &"HPProgressBar"
max_value = 1.0
value = 1.0
show_percentage = false

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "actor")]
script = ExtResource("7_xuses")
initial_state = NodePath("Idle")
actor = NodePath("..")
metadata/_custom_type_script = "uid://p8ii46y80jqx"

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("8_42irl")
metadata/_custom_type_script = "uid://fkavctw3l75"

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("9_42irl")
metadata/_custom_type_script = "uid://fkavctw3l75"

[node name="Hit" type="Node" parent="StateMachine"]
script = ExtResource("10_djydg")
metadata/_custom_type_script = "uid://fkavctw3l75"

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource("10_3xnwo")
metadata/_custom_type_script = "uid://fkavctw3l75"
